fix secondaty title on mobile

--- a/src/components/home-hero-slice/HomeHeroSlice.module.scss
+++ b/src/components/home-hero-slice/HomeHeroSlice.module.scss
@@ -89,7 +89,6 @@
     margin-left: 3vw;
     color: $color-font-contrast;
     font-size: 68px;
-    max-width: 35vw;
   }
   &__descriptionArea{
     padding-top: 12vh;
